<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_instruction"
            android:layout_gravity="center"
            android:textSize="18dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/music_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_button"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/portrait_instruction"
            android:layout_gravity="center"
            android:textSize="18dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/portrait_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/portrait_button"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>
    </LinearLayout>


</layout>